# whisperer

./: .env  .gitignore  .gitignore.orig  CLAUDE.md  Cargo.toml  Dockerfile  HANDOFF-crd-redesign.md  LICENSE  README.md  test.yaml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  helm.yaml  integration.yml  lint.yml  rust.yml  soundcheck.yml
chart/: Chart.yaml  values.yaml
chart/crds/: whisper.yaml
chart/templates/: NOTES.txt  deployment.yaml  rbac.yaml
docs/adr/: 0001-cross-namespace-sync-authorization.md  0002-security-review-remediation.md  0003-crd-scoped-rbac.md  README.md
docs/model/: README.md  Whisper.cfg  Whisper.tla  WhisperLiveness.cfg
example/: deploy.yaml
scripts/: check-model.sh  integration-test.sh
src/: controller.rs  election.rs  error.rs  ext.rs  labels.rs  lib.rs  main.rs  metrics.rs  server.rs  telemetry.rs  utils.rs  whisper.rs
