[package]
name = "whisperer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
axum = "0.8.9"
dotenvy = "0.15.7"
futures = "0.3.32"
gethostname = "1.1.0"
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = { version = "3.1.0", features = ["runtime", "config"] }
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = { version = "0.32.0", features = ["rt-tokio"] }
rand = "0.10.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "std"] }

[dev-dependencies]
httpmock = { version = "0.8.3", features = ["record"] }
serde_json = "1.0.150"
