[package]
name = "whisperer"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
dotenvy = "0.15.7"
futures = "0.3.32"
gethostname = "1.1.0"
k8s-openapi = { version = "0.27.1", features = ["v1_33"] }
kube = { version = "3.1.0", features = ["runtime", "config", "derive"] }
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
rand = "0.10.1"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "std"] }

[dev-dependencies]
# keep "record" — a test uses server.record() (the Soundcheck PR wrongly dropped it)
httpmock = { version = "0.8.3", features = ["record"] }
proptest = "1.11.0"
serde_json = "1.0.150"
